# stately

./: .gitignore  .goreleaser.yml  .releaserc.json  .tool-versions  BUILD  CHANGELOG.md  MODULE.bazel  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  main.go
.github/: dependabot.yml
.github/workflows/: ci.yaml  deps.yaml  goreleaser.yml  lint.yaml  release.yml
cmd/: BUILD.bazel  copy.go  manifest.go  root.go
hack/: commit_go_mod.sh
pkg/stately/actions/: BUILD.bazel  copy.go  manifest.go
pkg/stately/config/: BUILD.bazel  state_file.go  state_file_test.go
pkg/stately/models/: BUILD.bazel  manifest_container.go  manifest_file.go  manifest_file_test.go
tests/: BUILD  common.sh  copy_filemode_test.bats  copy_test.bats  copy_test.sh  copy_update_test.bats  dhall-render-test.json  jsonnet-render-test.json  manifest_dhall_test.bats  manifest_jsonnet_test.bats  manifest_merge_section_test.bats  manifest_test.bats  manifest_test.sh  merge-section-test.json  test.json
