module(name = "stately", version = "0.0.0")

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "rules_shellcheck", version = "0.3.2")
bazel_dep(name = "bazel_bats", version = "0.35.0")

# Go toolchain
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.6")

# Go dependencies
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Use all Go dependencies from go.mod
use_repo(
    go_deps,
    "com_github_ghodss_yaml",
    "com_github_gofrs_flock",
    "com_github_google_go_jsonnet",
    "com_github_jinzhu_copier",
    "com_github_mitchellh_go_homedir",
    "com_github_spf13_cobra",
    "com_github_spf13_viper",
    "org_uber_go_zap",
    "in_gopkg_yaml_v2",
)

# Shellcheck
shellcheck = use_extension("@rules_shellcheck//:extensions.bzl", "shellcheck")
shellcheck.register()

