load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "actions",
    srcs = [
        "copy.go",
        "manifest.go",
    ],
    importpath = "github.com/russell/stately/pkg/stately/actions",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/stately/config",
        "//pkg/stately/models",
        "@org_uber_go_zap//:zap",
    ],
)
