load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = ["state_file.go"],
    importpath = "github.com/russell/stately/pkg/stately/config",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_ghodss_yaml//:yaml",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "config_test",
    srcs = ["state_file_test.go"],
    embed = [":config"],
)
