load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "models",
    srcs = [
        "manifest_container.go",
        "manifest_file.go",
    ],
    importpath = "github.com/russell/stately/pkg/stately/models",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_go_jsonnet//formatter:go_default_library",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@org_uber_go_zap//:zap",
    ],
)
